# MyGigalearn

./: .gitignore  CMakeLists.txt  CMakePresets.json  CppProperties.json  README.md
.bmad/_cfg/: files-manifest.csv  manifest.yaml
.bmad/bmm/: config.yaml
.bmad/bmm/sub-modules/claude-code/: README.md  injections.yaml
.bmad/core/: config.yaml
GigaLearnCPP/RLGymCPP/src/RLGymCPP/EnvSet/: EnvSet.cpp  EnvSet.h
GigaLearnCPP/RLGymCPP/src/RLGymCPP/Gamestates/: GameState.h
GigaLearnCPP/RLGymCPP/src/RLGymCPP/Rewards/: Tactical1v1Reward.h
GigaLearnCPP/src/public/GigaLearnCPP/: Learner.cpp  LearnerConfig.h
config/: training_config.json
libtorch-cu13/: build-hash  build-version
libtorch-cu13/cmake/: protobuf-targets.cmake
libtorch-cu13/include/ATen/: Functions.h  NativeFunctions.h  NativeMetaFunctions.h  Operators.h  RedispatchFunctions.h  RegistrationDeclarations.h
libtorch-cu13/include/ATen/core/: aten_interned_strings.h
libtorch-cu13/include/ATen/cuda/: CUDAConfig.h
libtorch-cu13/include/caffe2/core/: macros.h
libtorch-cu13/share/cmake/Caffe2/: Caffe2Targets-release.cmake  Caffe2Targets.cmake
libtorch-cu13/share/cmake/Torch/: TorchConfig.cmake
libtorch-cu13/share/cmake/kineto/: kinetoLibraryConfig-release.cmake  kinetoLibraryConfig.cmake
libtorch-cu13/share/cpuinfo/: cpuinfo-targets-release.cmake  cpuinfo-targets.cmake
libtorch-cu13/share/doc/dnnl/: README
src/: CurriculumManager.cpp  CurriculumManager.h  ExampleMain.cpp  PhaseAwareReward.cpp  PhaseAwareReward.h  Scenario.h  ScenarioGenerator.cpp  ScenarioGenerator.h  scenarios.csv
